--- a/style/style.css
+++ b/style/style.css
@@ -122,6 +122,75 @@ body {
     height: 814px;
 }
 
+.hero-section_content_slider {
+    width: 52%;
+    height: 79%;
+    position: absolute;
+    left: 0;
+    top: 80px;
+    z-index: 3;
+    -webkit-animation: pulse 4.5s ease infinite;
+    -moz-animation: pulse 4.5s ease infinite;;
+    animation: pulse 4.5s ease infinite;
+}
+
+.hero-section_content_slider_slide {
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    transition: all 1s ease;
+    opacity: 0;
+}
+
+.hero-section_content_slider_slide_1 {
+    background-image: url(../img/mainPhotoXXLFront.png);
+}
+
+.hero-section_content_slider_slide_2 {
+    background-image: url(../img/mainPhotoXXLBack.png);
+}
+
+._show {
+    opacity: 1;
+}
+
+.hero-section_content > div:nth-child(2) {
+    position: relative;
+    z-index: 4;
+    width: 54%;
+}
+
+.hero-section_content > div:nth-child(2) > h1 {
+    font-size: 4.8rem;
+    line-height: 120%;
+    margin-bottom: 2rem;
+}
+
+.hero-section_content > div:nth-child(2) > h1 > b > span {
+    color: rgba(255, 255, 255, 0.50);
+}
+
+.hero-section_content > div:nth-child(2) > p {
+    font-size: 1rem;
+    line-height: 150%;
+}
+
+@media screen and (max-width: 1440px) {
+
+    .hero-section-content > div:nth-child(2) > h1 {
+        font-size: 3.5rem;
+    }
+
+}
+
+/*
 .hero-section_content_card {
     width: 52%;
     height: 79%;
@@ -176,34 +245,5 @@ body {
     background-image: url(../img/mainPhotoXXLBack.png);
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-
-.hero-section_content > div:nth-child(2) {
-    position: relative;
-    z-index: 4;
-    width: 54%;
-}
-
-.hero-section_content > div:nth-child(2) > h1 {
-    font-size: 4.8rem;
-    line-height: 120%;
-    margin-bottom: 2rem;
-}
-
-.hero-section_content > div:nth-child(2) > h1 > b > span {
-    color: rgba(255, 255, 255, 0.50);
-}
-
-.hero-section_content > div:nth-child(2) > p {
-    font-size: 1rem;
-    line-height: 150%;
-}
-
-@media screen and (max-width: 1440px) {
-
-    .hero-section-content > div:nth-child(2) > h1 {
-        font-size: 3.5rem;
-    }
-
-}
+    t
+*/
