change path ttf

--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,13 @@
 @font-face {
     font-family: 'Sen Regular';
     font-weight: 400;
-    src: url(/assets/font/Sen-Regular.ttf);
+    src: url(../assets/font/Sen-Regular.ttf);
 }
 
 @font-face {
     font-family: 'Sen Bold';
     font-weight: 700;
-    src: url(/assets/font/Sen-Bold.ttf);
+    src: url(../assets/font/Sen-Bold.ttf);
 }
 
 body {
