--- a/style/style.css
+++ b/style/style.css
@@ -287,26 +287,26 @@ h2.experience-section__title {
     background-color: var(--black-dlc);
 }
 
-h2.philosophy-section_left_title {
+h2.philosophy-section-left-side__title {
     line-height: 120%;
     font-size: 3.5rem;
     color: var(--black-dlc);
     margin-bottom: 1.5rem;
 }
 
-p.philosophy-section_left_text {
+p.philosophy-section-left-side__text {
     line-height: 150%;
     font-size: 1.2rem;
     color: #5B6876;
     margin-bottom: 8rem;
 }
 
-h2.philosophy-section_left_title-active,
-p.philosophy-section_left_text-active {
+h2.philosophy-section-left-side__title-active,
+p.philosophy-section-left-side__text-active {
     color: #fff;
 }
 
-button.philosophy-section_left_btn {
+button.philosophy-section-left-side__btn {
     padding: 1rem;
     cursor: pointer;
     background-color: transparent;
@@ -319,31 +319,31 @@ button.philosophy-section_left_btn {
     transition: all 1s ease;
 }
 
-p.philosophy-section_left_btn_text {
+p.philosophy-section-left-side__btn-text {
     color: var(--black-dlc);
     font-size: 1rem;
     line-height: 150%;
 }
 
-button.philosophy-section_left_btn:hover {
+button.philosophy-section-left-side__btn:hover {
     background-color: var(--black-dlc);
     -webkit-animation: pulseOne 4.5s ease infinite;
     -moz-animation: pulseOne 4.5s ease infinite;
     animation: pulseOne 4.5s ease infinite;
 }
 
-button.philosophy-section_left_btn:hover > p.philosophy-section_left_btn_text {
+button.philosophy-section-left-side__btn:hover > p.philosophy-section-left-side__btn-text {
     color: #fff;
 }
 
-button.philosophy-section_left_btn-active {
+button.philosophy-section-left-side__btn-active {
     background-color: var(--black-dlc);
     -webkit-animation: pulseOne 4.5s ease infinite;
     -moz-animation: pulseOne 4.5s ease infinite;
     animation: pulseOne 4.5s ease infinite;
 }
 
-p.philosophy-section_left_btn_text-active {
+p.philosophy-section-left-side__btn-text-active {
     color: #fff;
 }
 
@@ -361,7 +361,7 @@ p.philosophy-section_left_btn_text-active {
     background-color: #FFF3E4;
 }
 
-.philosophy-section_right_front {
+.philosophy-section-right-side__front {
     position: absolute;
     top: 0;
     left: 0;
@@ -373,14 +373,14 @@ p.philosophy-section_left_btn_text-active {
     background-image: url(../img/PhilosophyValues.png);
 }
 
-.philosophy-section_right_back > p {
+.philosophy-section-right-side__back > p {
     line-height: 150%;
     font-size: 2rem;
     color: #5B6876;
 }
 
-.philosophy-section_right_front,
-.philosophy-section_right_back {
+.philosophy-section-right-side__front,
+.philosophy-section-right-side__back {
     opacity: 0;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
@@ -391,19 +391,19 @@ p.philosophy-section_left_btn_text-active {
     padding: 7.5rem 4.5rem;
 }
 
-.skills-section_up-section {
+.skills-section__up-section {
     display: flex;
     gap: 1.5rem;
 }
 
-.skills-section_up-section_left {
+.skills-section-left-side {
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-h2.skills-section_up-section_left_title {
+h2.skills-section-left-side__title {
     font-weight: 700;
     font-size: 3.5rem;
     line-height: 120%;
@@ -412,13 +412,13 @@ h2.skills-section_up-section_left_title {
     -moz-transition: all 2s ease;
     transition: all 2s ease;
 }
-.skills-section_up-section_left > div:nth-child(1) > p:nth-child(2) {
+.skills-section-left-side > div:nth-child(1) > p:nth-child(2) {
     color: var(--gray);
     font-size: 1.2rem;
     line-height: 150%;
 }
 
-.skills-section_up-section_left > div:nth-child(2) {
+.skills-section-left-side > div:nth-child(2) {
     flex-grow: 1;
     background-position: center;
     background-repeat: no-repeat;
@@ -426,7 +426,7 @@ h2.skills-section_up-section_left_title {
     background-image: url(../img/skillsPhoto.jpg);
 }
 
-.skills-section_up-section_right {
+.skills-section-right-side {
     width: 50%;
     display: flex;
     justify-content: space-between;
@@ -435,40 +435,40 @@ h2.skills-section_up-section_left_title {
     gap: 3rem 1.5rem;
 }
 
-.skills-section_up-section_right_card {
+.skills-section-right-side__card {
     width: 48%;
 }
 
-.skills-section_up-section_right_card_inside > img {
+.skills-section-right-side__inside > img {
     width: 32px;
     height: 32px;
     margin-bottom: 1.5rem;
 }
 
-.skills-section_up-section_right_card_inside > h3 {
+.skills-section-right-side__inside > h3 {
     font-size: 1.5rem;
     line-height: 150%;
     margin-bottom: 1rem;
 }
 
-.skills-section_up-section_right_card_inside > p {
+.skills-section-right-side__inside > p {
     color: var(--gray);
     font-size: 1rem;
     line-height: 150%;
 }
 
-.skills-section_up-section_down-section {
+.skills-section__down-section {
     padding: 1.5rem 0;
 }
 
-.skills-section_up-section_down-section_items-wrap {
+.skills-section__items-wrap {
     position: relative;
     display: flex;
     overflow: hidden;
     gap: 24px;
 }
 
-.skills-section_up-section_down-section_items-wrap_items {
+.skills-section__items {
     display: flex;
     flex-shrink: 0;
     gap: 24px;
@@ -476,11 +476,11 @@ h2.skills-section_up-section_left_title {
     min-width: 100%;
 }
 
-.skills-section_up-section_down-section_items-wrap_marquee {
+.skills-section__marquee {
     animation: marquee 30s linear infinite;
 }
 
-.skills-section_up-section_down-section_items-wrap_item {
+.skills-section__item {
     border: 2px solid var(--blue);
     background: #000;
     width: 340px;
