change menu & add script

--- a/style/style.css
+++ b/style/style.css
@@ -122,16 +122,21 @@ button {
 }
 
 .nav__menu > ul > li {
-    padding: 2rem 1.5rem;
-    cursor: pointer;
     font-size: 1rem;
     line-height: 150%;
+}
+
+a.nav__link {
+    text-decoration: none;
+    color: #fff;
+    padding: 2rem 1.5rem;
+    cursor: pointer;
     -webkit-transition: background-color 0.5s ease;
     -moz-transition: background-color 0.5s ease;
     transition: background-color 0.5s ease;
 }
 
-.nav_menu > ul > li:hover {
+a.nav__link:hover {
     background-color: var(--blue);
     font-weight: 700;
 }
