--- a/style/style.css
+++ b/style/style.css
@@ -106,6 +106,7 @@ button {
     -moz-transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    height: 88px;
 }
 
 .nav_fixed {
@@ -114,14 +115,26 @@ button {
 }
 
 .nav__logo {
+    padding: 2rem 1.5rem;
+    cursor: pointer;
+        -webkit-transition: background-color 0.5s ease;
+    -moz-transition: background-color 0.5s ease;
+    transition: background-color 0.5s ease;
+}
+
+.nav__logo:hover {
+    background-color: var(--gray)
+}
+
+.nav__logo > img {
     width: 78px;
 }
 
-.nav__menu > ul {
+.nav__menu > div {
     display: flex;
 }
 
-.nav__menu > ul > li {
+.nav__menu > div > a > p {
     font-size: 1rem;
     line-height: 150%;
 }
@@ -212,7 +225,7 @@ a.nav__link:hover {
 }
 
 .experience-section {
-    padding: 7.5rem 4.5rem 8.75rem;
+    padding: 7.5rem 4.5rem;
 }
 
 p.experience-section__subtitle {
@@ -322,9 +335,6 @@ button.philosophy-section-left-side__btn {
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     transition: all 1s ease;
-}
-
-p.philosophy-section-left-side__btn-text {
     color: var(--black-dlc);
     font-size: 1rem;
     line-height: 150%;
@@ -335,9 +345,6 @@ button.philosophy-section-left-side__btn:hover {
     -webkit-animation: pulseOne 4.5s ease infinite;
     -moz-animation: pulseOne 4.5s ease infinite;
     animation: pulseOne 4.5s ease infinite;
-}
-
-button.philosophy-section-left-side__btn:hover > p.philosophy-section-left-side__btn-text {
     color: #fff;
 }
 
@@ -346,9 +353,6 @@ button.philosophy-section-left-side__btn-active {
     -webkit-animation: pulseOne 4.5s ease infinite;
     -moz-animation: pulseOne 4.5s ease infinite;
     animation: pulseOne 4.5s ease infinite;
-}
-
-p.philosophy-section-left-side__btn-text-active {
     color: #fff;
 }
 
@@ -393,12 +397,13 @@ p.philosophy-section-left-side__btn-text-active {
 }
 
 .skills-section {
-    padding: 7.5rem 4.5rem 0;
+    padding: 7.5rem 4.5rem;
 }
 
 .skills-section__up-section {
     display: flex;
     gap: 1.5rem;
+    margin-bottom: 2.5rem;
 }
 
 .skills-section-left-side {
@@ -462,10 +467,6 @@ h2.skills-section-left-side__title {
     line-height: 150%;
 }
 
-.skills-section__down-section {
-    padding: 1.5rem 0;
-}
-
 .skills-section__items-wrap {
     position: relative;
     display: flex;
@@ -489,14 +490,14 @@ h2.skills-section-left-side__title {
     border: 2px solid var(--blue);
     background: #000;
     width: 340px;
-    height: 140px;
+    height: 90px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .project-section {
-    padding: 7.5rem 4.5rem;
+    padding: 0 4.5rem 7.5rem;
 }
 
 .project-section__up-section {
