--- a/style/style.css
+++ b/style/style.css
@@ -123,7 +123,7 @@ button {
 }
 
 .nav__logo:hover {
-    background-color: var(--gray)
+    background-color: var(--black-dlc);
 }
 
 .nav__logo > img {
@@ -500,25 +500,54 @@ h2.skills-section-left-side__title {
     padding: 3.5rem;
 }
 
-.project-section__up-section {
-    display: flex;
-}
-
-.project-section-left-side,
-.project-section-right-side {
-    width: 50%;
-}
-
-.project-section-left-side > p {
+.project-section-up-section > p {
     color: var(--gray);
     font-size: 1rem;
     line-height: 150%;
     margin-bottom: 0.5rem;
 }
 
-.project-section-left-side > h3 {
+.project-section-up-section__title {
+    font-weight: 700;
     font-size: 3.5rem;
     line-height: 120%;
+    margin-bottom: 2.5rem;
+    -webkit-transition: all 2s ease;
+    -moz-transition: all 2s ease;
+    transition: all 2s ease;
+}
+
+.project-section-down-section {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.project-section-down-section__card {
+    background-color: var(--black-dlc);
+    flex-basis: calc(50% - 1.5rem);
+    flex-grow: 1;
+}
+
+.project-section-down-section__card > img {
+    width: 100%;
+    display: block;
+}
+
+.project-section-down-section__card > div:nth-child(2) {
+    padding: 3rem 2rem;
+}
+
+.project-section-down-section__card > div:nth-child(2) > h3 {
+    font-size: 1.5rem;
+    line-height: 150%;
+    margin-bottom: 1rem;
+}
+
+.project-section-down-section__card > div:nth-child(2) > p {
+    color: var(--gray);
+    font-size: 1rem;
+    line-height: 150%;
 }
 
 h2._hidden {
