start photo section

--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,7 @@
     --blue: #5221E6;
     --gray: #8491A0;
     --black-dlc: #181823;
+    --peach: #FFF3E4;
 }
 
 body {
@@ -224,10 +225,6 @@ a.nav__link:hover {
     line-height: 150%;
 }
 
-.experience-section {
-    padding: 3.5rem;
-}
-
 p.experience-section__subtitle {
     color: var(--gray);
     font-size: 1rem;
@@ -292,7 +289,7 @@ h2.experience-section__title {
 }
 
 .philosophy-section-left-side {
-    background-color: #FFF3E4;
+    background-color: var(--peach);
     box-sizing: border-box;
     width: 50%;
     padding: 7.5rem 4.5rem;
@@ -367,7 +364,7 @@ button.philosophy-section-left-side__btn-active {
 }
 
 .philosophy-section-right-side-active {
-    background-color: #FFF3E4;
+    background-color: var(--peach);
 }
 
 .philosophy-section-right-side__front {
@@ -396,10 +393,6 @@ button.philosophy-section-left-side__btn-active {
     transition: all 1s ease;
 }
 
-.skills-section {
-    padding: 3.5rem;
-}
-
 .skills-section__up-section {
     display: flex;
     gap: 1.5rem;
@@ -424,7 +417,7 @@ h2.skills-section-left-side__title {
 }
 .skills-section-left-side > div:nth-child(1) > p:nth-child(2) {
     color: var(--gray);
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 150%;
 }
 
@@ -496,8 +489,68 @@ h2.skills-section-left-side__title {
     justify-content: center;
 }
 
-.project-section {
-    padding: 3.5rem;
+.photo-section {
+    background-color: var(--peach);
+    padding: 7.5rem 4.5rem;
+}
+
+.photo-section > h2 {
+    color: var(--black-dlc);
+    font-weight: 700;
+    font-size: 3.5rem;
+    line-height: 120%;
+    margin-bottom: 2.5rem;
+}
+
+.photo-section > p {
+    color: #5B6876;
+    font-size: 1rem;
+    line-height: 150%;
+    margin-bottom: 3.5rem;
+}
+
+.photo-section__tab-container > ul {
+    display: flex;
+    gap: 2rem;;
+    margin-bottom: 1.5rem;
+}
+
+.photo-section__tab-btn {
+    background-color: var(--black-dlc);
+    font-size: 1rem;
+    text-transform: uppercase;
+    padding: 1rem;
+    cursor: pointer;
+    -webkit-transition: background-color 0.5s ease;
+    -moz-transition: background-color 0.5s ease;
+    transition: background-color 0.5s ease;
+}
+
+.photo-section__tab-btn:hover {
+    background-color: var(--blue);
+}
+
+.photo-section__tab-btn-active {
+    background-color: var(--blue);
+}
+
+.gallery__content {
+    display: flex;
+    gap: 1rem;
+    opacity: 0;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    transition: all 1s ease;
+}
+
+.gallery__item {
+    flex-basis: 25%;
+    flex-grow: 1;
+}
+
+.gallery__item > img {
+    display: block;
+    width: 100%;
 }
 
 .project-section-up-section > p {
@@ -558,6 +611,10 @@ h2._hidden {
     opacity: 1;
 }
 
+._section {
+    padding: 3.5rem;
+}
+
 @media screen and (max-width: 1440px) {
 
     .hero-section__content > div:nth-child(2) > h1 {
@@ -565,6 +622,12 @@ h2._hidden {
     }
     .skills-section-right-side__card {
         width: 100%;
+    }
+    .gallery__content {
+        flex-wrap: wrap;
+    }
+    .gallery__item {
+        flex-basis: 45%;
     }
 
 }
