--- a/style/style.css
+++ b/style/style.css
@@ -607,6 +607,51 @@ h2.skills-section-left-side__title {
     line-height: 150%;
 }
 
+.footer-section {
+    margin: 0 3.5rem;
+    padding: 1rem 3.5rem;
+    border-top: 2px solid var(--black-dlc);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-section > div:nth-child(1) > img {
+    width: 48px;
+}
+
+.footer-section > div:nth-child(2) {
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+}
+
+.footer-section > div:nth-child(2) > p,
+.footer-section > div:nth-child(2) > a {
+    font-size: 0.5rem;
+    line-height: 120%;
+    text-decoration: none;
+    color: var(--gray);
+    position: relative;
+}
+
+.footer-section > div:nth-child(2) > a::before,
+.footer-section > div:nth-child(2) > a::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    height: 100%;
+    border-left: 2px solid var(--black-dlc);
+    top: 0;
+}
+
+.footer-section > div:nth-child(2) > a::before {
+    left: -1rem;
+}
+.footer-section > div:nth-child(2) > a::after {
+    right: -1rem;
+}
+
 ._container {
     max-width: 1440px;
     margin: 0 auto;
@@ -643,61 +688,3 @@ h2._hidden {
     }
 
 }
-
-/*
-.hero-section_content_card {
-    width: 52%;
-    height: 79%;
-    position: absolute;
-    left: 0;
-    top: 80px;
-    z-index: 3;
-    -webkit-animation: pulse 4s ease infinite;
-    -moz-animation: pulse 4s ease infinite;;
-    animation: pulse 4s ease infinite;
-    -webkit-perspective: 800px;
-    -moz-perspective: 800px;
-    perspective: 800px;
-}
-
-.hero-section_content_card:hover .hero-section_content_card_front {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-.hero-section_content_card:hover .hero-section_content_card_back {
-    -webkit-transform: rotateY(360deg);
-    -moz-transform: rotateY(360deg);
-    transform: rotateY(360deg);
-}
-
-.hero-section_content_card_front,
-.hero-section_content_card_back {
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: absolute;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-transition: all 1s ease;
-    -moz-transition: all 1s ease;
-    transition: all 1s ease;
-}
-
-.hero-section_content_card_front {
-    background-image: url(../img/mainPhotoXXLFront.png);
-}
-
-.hero-section_content_card_back {
-    background-image: url(../img/mainPhotoXXLBack.png);
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    t
-*/
